bridge/base/0-may-namespace.yaml
#! 0-may-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: may
    labels:
        com.docker.compose.project: may
