bridge/base/may-deployment.yaml
#! may-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: may
    namespace: may
    labels:
        com.docker.compose.project: may
        com.docker.compose.service: may
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: may
            com.docker.compose.service: may
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: may
                com.docker.compose.service: may
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: may
                  image: may-may
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: may-5050
                      containerPort: 5050
                  volumeMounts:
                    - name: app-data
                      mountPath: /app/data
            volumes:
                - name: app-data
                  persistentVolumeClaim:
                    claimName: may-may-data
